# django-vercel-test

./: .gitignore  Pipfile  requirements.txt  vercel.json
api/: README.md  settings.py  wsgi.py
config/: settings.py  urls.py  wsgi.py
example/: urls.py
py/projects/admin/: README.md  package.json  pyproject.toml  vercel.json
py/projects/admin/config/: settings.py
py/projects/admin/safebear_admin/: admin.py  bypass_auth_middleware.py
py/projects/admin/scripts/: build.sh
safebear_admin/: apps.py  urls.py
vercel_app/: settings.py
